# perrr

./: .gitignore  .npmrc  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
crates/perrr-dom/: Cargo.toml
crates/perrr-dom/src/: error.rs  lib.rs  node.rs  selector.rs  tree.rs
crates/perrr-dom/tests/: attr_case.rs  basic.rs  selectors.rs  stale_ids.rs  tree_invariants.rs
crates/perrr-layout/: Cargo.toml
crates/perrr-layout/src/: lib.rs
crates/perrr-node/: Cargo.toml
crates/perrr-node/src/: lib.rs
crates/perrr-node/tests/: hello.rs
crates/perrr-paint/: Cargo.toml
crates/perrr-paint/src/: lib.rs
crates/perrr-perf/: Cargo.toml
crates/perrr-perf/src/: lib.rs
crates/perrr-scheduler/: Cargo.toml
crates/perrr-scheduler/src/: lib.rs
crates/perrr-style/: Cargo.toml
crates/perrr-style/src/: lib.rs
crates/perrr-thrash/: Cargo.toml
crates/perrr-thrash/src/: lib.rs
fixtures/acceptance/bench/: opts.ts
fixtures/acceptance/components/: accordion.bench.tsx  accordion.test.tsx  accordion.tsx
fixtures/acceptance/lib/: bench-opts.ts  motion-tokens.ts
specs/: README.md
specs/crates/perrr-dom/: spec.md
specs/crates/perrr-node/: spec.md
specs/decisions/: 0001-product-is-a-vitest-environment.md  0002-native-via-napi-rs.md  0003-vitest-environment-package-naming.md
specs/milestones/: m1-workspace-skeleton.md  m2-dom-shim.md
specs/overview/: 00-tdd.md  01-glossary.md  02-metrics.md  03-dom-api-coverage.md  04-fixtures.md  05-hypotheses.md
