[package]
name = "perrr-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
perrr-dom = { path = "../perrr-dom" }

[build-dependencies]
napi-build = { workspace = true }
